Fixes spacing in styles Idk

--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -9,9 +9,6 @@
 
 $black: #111111;
 $grey:  #555555;
-
-
-$grey-dark: #444444;
 $grey-lightest: #f0f0f0;
 $grey-light: #cccccc;
 $white: #ffffff;
